--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -5,7 +5,7 @@
 <ul>
   {{#each burger}}
     {{#unless devoured}}
-      {{> devoured/burger-block devoured=true}}
+      {{> burger/burger-block devoured=true}}
     {{/unless}}
   {{/each}}
 </ul>
@@ -15,7 +15,7 @@
 <ul>
   {{#each burger}}
     {{#if devoured}}
-      {{> devoured/burger-block devoured=false}}
+      {{> burger/burger-block devoured=false}}
     {{/if}}
   {{/each}}
 </ul>
@@ -24,8 +24,8 @@
 <form class="create-form">
 
   <div class="form-group">
-    <label for="ca">Burger Name:</label>
-    <input type="text" id="ca" name="name">
+    <label for="burgName">Burger Name:</label>
+    <input type="text" id="burgName" name="burgName">
   </div>
 
   <div class="form-group">
