updated file structure to match cats activity

--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -1,6 +1,7 @@
 <li>
+  <div></div>
 	{{name}}
-
+ 
 	<button class="change-devoured" data-id="{{id}}" data-newdevoured="{{devoured}}">
 		{{#if devoured}}IT'S EATIN' TIME!{{else}}Un-devour...{{/if}}
 	</button>
