--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,18 +1,27 @@
-<h1>Burger-OKAY-TIME</h1>
+<div class="container">
+  <div class="row">
+    <div class="col-12 text-center headline">
+      <h1>Burger-OKAY-TIME</h1>
+    </div>
+  </div>
+</div>
 
-<h2>burgerrrrrs</h2>
+<div class="row">
+  <div class="col-6 undevoured">
+    <h2>Yet to be devoured</h2>
 
-<ul>
+  <ul>
   {{#each burgers}}
     {{#unless devoured}}
       {{> burgers/burger-block devoured=true}}
     {{/unless}}
   {{/each}}
-</ul>
+  </ul>
 
-<h2>Burgers that are devoured!</h2>
-
-<ul>
+  </div>
+  <div class="col-6 devoured">
+    <h2>Burgers I've devoured</h2>
+      <ul>
   {{#each burgers}}
     {{#if devoured}}
       {{> burgers/burger-block devoured=false}}
@@ -20,7 +29,12 @@
   {{/each}}
 </ul>
 
-<h2>Add a burger</h2>
+  </div>
+</div>
+
+<div class="row addBurgerBox justify-content-center">
+  <div class="col-md-8 col-lg-4 text-center addBurger">
+    <h2>Add a burger</h2>
 <form class="create-form">
 
   <div class="form-group">
@@ -28,11 +42,14 @@
     <input type="text" id="burgName" name="burgName">
   </div>
 
-  <div class="form-group">
+  <div class="form-group devouredBtns">
     <label for="devoured">Devour?</label><br>
-    <input type="radio" name="devoured" value="1" checked> Devoured!<br>
-    <input type="radio" name="devoured" value="0"> Not eaten?
+    <input class="devouredBtns" type="radio" name="devoured" value="1" checked> Devoured!<br>
+    <input class="devouredBtns" type="radio" name="devoured" value="0"> Not eaten?
   </div>
 
   <button type="submit">New Burger?</button>
 </form>
+  </div>
+</div>
+
